--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "PasteIt",
   "version": "1.0",
   "description": "Capture multiple copied text snippets and use them to fill web forms.",
-  "permissions": ["storage", "activeTab", "scripting", "clipboardRead", "clipboardWrite"],
+  "permissions": ["storage", "scripting", "clipboardWrite", "contextMenus", "activeTab"],
   "host_permissions": ["<all_urls>"],
   "web_accessible_resources": [
     {
@@ -17,7 +17,11 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "exclude_matches": [
+      "https://chrome.google.com/webstore/*"
+    ],
       "js": ["content.js"],
+      "run_at": "document_start", 
       "all_frames": true
     }
   ],
